<resources>
    <string name="app_name">Service Locator</string>
    <string name="service_locator">SERVICE LOCATOR</string>
    <string name="welcome_to_service_locator">Welcome To Service Locator</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="string_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="go_login">Go</string>
    <string name="user_sign_up">Sign Up as User</string>
    <string name="company_sign_up">Sign Up as User as Company</string>
    <string name="textviewwelcome">Welcome</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_looking_for_employers_sign_up_here">Welcome, looking for employers sign up here:</string>
    <string name="full_name_company_name">Full Name/Company Name</string>
    <string name="user_name">Username</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="physical_address">Physical Address</string>
    <string name="id_company_number">ID/Company Number</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="sign_up_company">Sign up Company</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="welcome_looking_for_employee_or_services_sign_up_here">Welcome, looking for employee or services sign up here:</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="physical_address">Physical Address</string>
    <string name="id_number">ID Number</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="sign_up_user">Sign up User</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
</resources>